# RouterSense

./: .gitignore  ELIMINATION_LOG.md  README.md  memory.md  new-direction.md  poc-line-1.md  poc1-legacy-task  pyproject.toml  requirements-gpu.txt  rs-task
RS/: README.md  pyproject.toml
RS/analysis/: compare_strategies.py  plot_makespan.py  plot_prediction.py  summarize_pairwise.py
RS/artifacts/poc_line1/: multiphase_global_cross_phase_shift.json  multiphase_global_unlock_hotspot.json
RS/deploy/inventory/: README.md  hosts.example.yaml  hosts.local.yaml  hosts.local.yaml.example
RS/deploy/scripts/: check_cluster_access.sh  check_repo_parity.sh  collect_logs.sh  launch_distributed_olmoe_smoke.sh  launch_remote.sh  prepare_2node_4gpu.sh  prepare_node.sh  sync_repo.sh  verify_cluster_gpu_env.py  verify_model_cache.py  verify_model_parity.py
RS/experiments/deployment/: distributed_nccl_smoke.py  distributed_olmoe_ep_smoke.py  distributed_olmoe_reference.py  future_multinode_smoke.py  probe_olmoe_architecture.py  single_gpu_olmoe_smoke.py  single_gpu_router_trace_smoke.py
RS/experiments/distributed/: exp_nccl_smoke.py  (+2 more)
RS/scripts/: check_repo_parity.sh  launch_remote.sh  prefetch_model.sh  router_trace_smoke.py  run_scheduling_experiment.sh  sync_repo.sh  text_inference.py
RS/tests/: test_distributed_ep_scaffold.py  test_multi_rank_aggregation.py  test_no_legacy_imports.py  test_package_source_only.py  test_phase0b_node_inventory.py  test_poc_line1.py  test_qwen_trace.py  test_scheduled_execution_bridge.py  test_scheduler_strategy.py  test_structure_refactor.py
(+830 files in other folders)
