[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "routesense-poc1"
version = "0.1.0"
description = "PoC1 for OLMoE route tracing and ablation scaffolding"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
gpu = [
  "torch",
  "transformers",
  "accelerate",
  "safetensors"
]
dev = [
  "pytest",
  "numpy",
  "pyyaml"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
